ensure contact menu stays in menu bar. text align quote source to be responsive friendly.

--- a/www/css/se.css
+++ b/www/css/se.css
@@ -56,7 +56,8 @@ blockquote {
 .cite {
 	font-size: 0.8em;
 	font-style: italic;
-	padding: 10px 0 2em 45em;
+	padding: 10px 5em 2em 0;
+	text-align: right;
 }
 
 .content {
@@ -80,12 +81,12 @@ h3 {
 
 .header {
 	background-color: #777777;
-	min-width: 760px;
+	min-width: 820px;
 	width: 100%;
 }
 
 .header img {
-	min-width: 760px;
+	min-width: 820px;
 	width: 100%;
 }
 
@@ -103,7 +104,7 @@ li:before {
 	background-color: #777777;
 	border-top: 1px solid #000000;
 	height: 40px;
-	min-width: 760px;
+	min-width: 820px;
 	width: 100%;
 }
 
@@ -111,7 +112,7 @@ li:before {
 	display: inline-block;
 	height: 100%;
 	text-align: center;
-	width: 13.95%;
+	width: 13.7%;
 }
 
 .nav a:link {
@@ -161,6 +162,6 @@ ul {
 }
 
 .view {
-	min-width: 760px;
+	min-width: 820px;
 	width: 100%;
 }
